# esp-idf-rc522

./: .astylerc  .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Kconfig  LICENSE  Makefile  README.md  cppcheck-suppr.txt  idf_component.yml  rc522.c  rc522.h
.github/: FUNDING.yml
.github/workflows/: auto-assign-pr-author.yaml  build.yml  build_examples.yaml  clang-format-check.yaml  clang_format_check.yaml  pr_author_autoassign.yaml  publish.yaml  validate.yaml  validate_pr.yaml
example/: CMakeLists.txt
example/main/: CMakeLists.txt  main.c
examples/: README.md
examples/basic/: CMakeLists.txt  sdkconfig.defaults
examples/basic_i2c/: CMakeLists.txt
examples/i2c/: CMakeLists.txt
examples/memory_dump/: CMakeLists.txt
examples/multiple_readers/: CMakeLists.txt
examples/multiple_scanners/: CMakeLists.txt
examples/picc_nxp/: CMakeLists.txt
examples/read_write/: CMakeLists.txt
include/: guards.h  rc522.h  rc522_driver.h  rc522_driver_i2c.h  rc522_driver_spi.h  rc522_i2c.h  rc522_pcd.h  rc522_picc.h  rc522_picc_dump.h  rc522_registers.h  rc522_types.h
include/driver/: rc522_i2c.h  rc522_spi.h
include/picc/: rc522_mifare.h  rc522_nxp.h
include/rc522/: guards.h  registers.h
internal/: rc522_driver_internal.h  rc522_helpers_internal.h  rc522_pcd_internal.h  rc522_picc_internal.h  rc522_types_internal.h
main/: main.c  rc522.h
private_include/: rc522_aliases.h  rc522_crc.h  rc522_driver_private.h  rc522_helpers_private.h  rc522_io.h  rc522_pcd.h  rc522_pcd_private.h  rc522_picc_private.h  rc522_private.h  rc522_registers.h  rc522_types_private.h
private_include/comm/: rc522_comm.h  rc522_init.h  rc522_rw_test.h
src/: rc522.c  rc522_aliases.c  rc522_crc.c  rc522_driver.c  rc522_driver_i2c.c  rc522_driver_spi.c  rc522_helpers.c  rc522_i2c.c  rc522_io.c  rc522_pcd.c  rc522_picc.c  rc522_picc_dump.c  rc522_spi.c
src/comm/: rc522_comm.c  rc522_crc.c  (+2 more)
test/: CMakeLists.txt  sdkconfig.defaults
(+35 files in other folders)
