idf_component_register(
    INCLUDE_DIRS
        include
    PRIV_INCLUDE_DIRS
        private_include
    SRCS
        src/rc522.c
        src/rc522_helpers.c
        src/rc522_pcd.c
        src/rc522_picc.c
        src/rc522_picc_dump.c
        src/picc/rc522_mifare.c
        src/picc/rc522_mifare_ul.c
    REQUIRES
        esp_event
)
